--- a/views/home.pug
+++ b/views/home.pug
@@ -10,12 +10,10 @@ html
         ul
             li: a(href="/medicos") Medicos
             li: a(href="/medicos") Sacar Turnos
-            li: a(href="/medicos") Registrate
+            li: a(href="/auth/register") Registrate/Iniciar Sesion
     main
         h2 Agenda de Consultorios 
         p Saca tus turnos médicos de manera fácil y rápida.
         p Utiliza el menú de navegación para acceder a las secciones de la aplicación.
     footer
       p &copy; 2024 Agenda de Consultorios
-        
-    
