bug fixes in crearPaciente

--- a/views/crearPaciente.pug
+++ b/views/crearPaciente.pug
@@ -4,7 +4,7 @@ html
         title Crear Paciente 
     body 
         h1 Crear Paciente 
-        form(action="/pacientes",method="POST")
+        form(action="/pacientes/crear",method="POST")
             div 
                 label(for="nombre_completo") Nombre completo:
                 input(type="text", id=nombre_completo,name="nombre_completo", required)
