--- a/views/home.pug
+++ b/views/home.pug
@@ -8,9 +8,7 @@ html
         h1 ¡Bienvenid@!
     nav
         ul
-            li: a(href="/medicos") Medicos
-            li: a(href="/medicos") Sacar Turnos
-            li: a(href="/auth/register") Registrate/Iniciar Sesion
+            li: a(href="/auth/login") Registrate/Iniciar Sesion
     main
         h2 Agenda de Consultorios 
         p Saca tus turnos médicos de manera fácil y rápida.
