--- a/views/headerAdm.pug
+++ b/views/headerAdm.pug
@@ -2,5 +2,6 @@ header
     h4 Agencia de Consultorios
     nav 
         ul
-            li: a(href="/profesional/crear") Cargar medico
+            li: a(href="/profesional/crear") Medicos
+            li: a(href="/profesional/agendas") Agendas
             li: button(onclick="logout()") Cerrar sesión
