--- a/views/paciente.pug
+++ b/views/paciente.pug
@@ -3,5 +3,10 @@ html
   head
     title Vista Paciente
   body
+    header
+    h4 Agencia de Consultorios
+    nav 
+      ul
+        li: a(href="/medicos") Sacar Turnos
     h1 Bienvenido, paciente!
     p Aquí puedes gestionar tus consultas médicas.
