--- a/views/paciente.pug
+++ b/views/paciente.pug
@@ -2,11 +2,13 @@ doctype html
 html
   head
     title Vista Paciente
+    script(src="/logout.js") // Importa el archivo de logout
   body
     header
-    h4 Agencia de Consultorios
-    nav 
-      ul
-        li: a(href="/medicos") Sacar Turnos
+      h4 Agencia de Consultorios
+      nav 
+        ul
+          li: a(href="/medicos") Sacar Turnos
+          li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
     h1 Bienvenido, paciente!
     p Aquí puedes gestionar tus consultas médicas.
