--- a/views/login.pug
+++ b/views/login.pug
@@ -4,26 +4,29 @@ html
     title Registro Login
     link(rel="stylesheet", href="/login.css")
   body
+    header 
+      img(src="/agenda.png", alt="" class="logoHeader")
     section.seccion
       article.articuloLogin
         form.formLogin(id="loginForm")
-          h2.h2Login INICIAR SESIÓN
+          span.spanLogin INICIAR SESIÓN
           fieldset.emailLogin
-            label.lbEmailLogin(for="loginEmail") Email:
-            input.inputEmailLogin(type="email", id="loginEmail", name="email", required)
+            label.lbEmailLogin(for="loginEmail") Correo electrónico:
+            input.inputEmailLogin(type="email", id="loginEmail", name="email", required, placeholder="Correo electrónico")
           fieldset.pwLogin
             label.lbPwLogin(for="loginPassword") Contraseña:
-            input.inputPwLogin(type="password", id="loginPassword", name="password", required)
+            input.inputPwLogin(type="password", id="loginPassword", name="password", required, placeholder="Contraseña")
+          a(href="/pwOlvidada" class="pwOlvidada") ¿Olvidaste tu contraseña? 
           button.botonLogin(type="submit") Iniciar Sesión
       article.articuloRegistro
         form.formRegistro(action="/auth/register", method="POST")
-          h2.h2Registro REGISTRARSE
+          span.spanRegistro REGISTRARSE
           fieldset.emailRegistro
             label.lbEmailRegistro(for="registerEmail") Correo electrónico:
-            input.inputEmailRegistro(type="email", id="registerEmail", name="email", required)
+            input.inputEmailRegistro(type="email", id="registerEmail", name="email", required, placeholder="Correo electrónico")
           fieldset.pwRegistro
             label.lbPwRegistro(for="registerPassword") Contraseña:
-            input.inputPwRegistro(type="password", id="registerPassword", name="password", required)
+            input.inputPwRegistro(type="password", id="registerPassword", name="password", required, placeholder="Contraseña")
           fieldset.rolRegistro
             label.lbRolRegistro(for="rol") Rol:
             select.selectRol(name="rol")
@@ -31,4 +34,13 @@ html
               option(value="secretaria") Secretaria
               option(value="administrador") Administrador
           button.botonRegistro(type="submit") Registrarse
+    footer(class="footer")
+      section(class="sectionFooter")
+        ul Nuestros GitHub
+          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
+          li: a(href="https://github.com/JuanCarrillo2435") Lucero Miguel
+        img(src="/agenda.png", alt="" class="logoFooter")
+        ul Nuestros LinkedIn
+          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
+          li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel 
     script(type="module" src="/login.js")
