--- a/views/home.pug
+++ b/views/home.pug
@@ -5,13 +5,20 @@ html
     link(rel="stylesheet", href="home.css")
   body
     header
-        h1 ¡Bienvenid@!
-    nav
-        ul
-            li: a(href="/auth/login") Registrate/Iniciar Sesion
+      img(src="/agenda.png", alt="" class="logoHeader")
+      nav
+          ul
+              li: a(href="/auth/login") Registrate / Iniciar Sesion
     main
         h2 Agenda de Consultorios 
         p Saca tus turnos médicos de manera fácil y rápida.
         p Utiliza el menú de navegación para acceder a las secciones de la aplicación.
-    footer
-      p &copy; 2024 Agenda de Consultorios
+    footer(class="footer")
+      section(class="sectionFooter")
+        ul Nuestros GitHub
+          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
+          li: a(href="https://github.com/JuanCarrillo2435") Lucero Miguel
+        img(src="/agenda.png", alt="" class="logoFooter")
+        ul Nuestros LinkedIn
+          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
+          li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
