--- a/public/home.css
+++ b/public/home.css
@@ -1,35 +1,92 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    color: #333;
-    margin: 0;
-    padding: 0;
-  }
-  
-  header {
-    background-color: #4CAF50;
-    color: white;
-    padding: 1rem;
-    text-align: center;
-  }
-  
-  nav ul {
-    list-style: none;
-    padding: 0;
-    text-align: center;
-  }
-  
-  nav ul li {
-    display: inline-block;
-    margin: 0 1rem;
-  }
-  
-  footer {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-    padding: 1rem;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-  }
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: #FBFBFB;
+  color: #333;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+header {
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center ;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.logoHeader{
+  padding-left: 70px;
+}
+
+nav ul {
+  list-style: none;
+  text-align: center;
+  padding-right: 70px;
+}
+
+nav ul li {
+  display: inline-block;
+  margin: 0 1rem;
+}
+
+.footer {
+  border-top: 1px solid rgb(129, 129, 129);
+  width: 80vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.sectionFooter {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul {
+  font-size: larger;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  font-weight: 600;
+}
+
+li {
+  list-style-type: none;
+  font-size: medium;
+  margin-top: 5px;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  font-weight: 400;
+}
+
+a:hover {
+  text-decoration: dotted;
+  color: #daa761;
+}
+
+.logoFooter {
+  width: 80px;
+  height: 80px;
+}
