--- a/views/login.pug
+++ b/views/login.pug
@@ -5,7 +5,7 @@ html
     link(rel="stylesheet", href="/login.css")
   body
     header 
-      img(src="/agenda.png", alt="" class="logoHeader")
+      a(href="http://localhost:3000/", rel="noopener noreferrer"): img(src="/agenda.png", alt="" class="logoHeader")
     section.seccion
       article.articuloLogin
         form.formLogin(id="loginForm")
