--- a/views/adminCargarAgenda.pug
+++ b/views/adminCargarAgenda.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         title Cargar Medico
-        link(rel="stylesheet", href="/adminCargarProfesional.css")
+        link(rel="stylesheet", href="/adminCargarAgenda.css")
     body
         header
             img(src="/agenda.png", alt="logo" class="logoHeader")
@@ -13,7 +13,7 @@ html
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
         main 
-            h1 Cargar Medicos
+            h1 Cargar Agenda
         footer(class="footer")
             section(class="sectionFooter")
                 ul Nuestros GitHub
