--- a/views/secretariaGestionTurno.pug
+++ b/views/secretariaGestionTurno.pug
@@ -1,18 +1,18 @@
 doctype html
 html
   head
-    title Vista Paciente
-    link(rel="stylesheet" href="/paciente.css")
+    title Secretaria Panel
+    link(rel="stylesheet" href="/secretariaGestionTurno.css")
   body
     header
       img(src="/agenda.png" alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
-          li: a(href="/pacientes/paciente") Inicio
-          li: a(href="/pacientes/turno") Sacar Turnos
+          li: a(href="/secretaria/home") Inicio
+          li: a(href="/secretaria/gestionTurno") Gestionar Turnos
           li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
-    h1 Bienvenido, paciente!
-    p Aquí puedes gestionar tus consultas médicas.
+    h1 Bienvenida, secretaria!
+    p Aquí puedes gestionar turnos.
     footer(class="footer")
       section(class="sectionFooter")
         ul(class="ulFooter") Nuestros GitHub
