--- a/views/adminPanel.pug
+++ b/views/adminPanel.pug
@@ -8,9 +8,9 @@ html
             img(src="/agenda.png", alt="logo" class="logoHeader")
             nav 
                 ul(class="ulHeader")
-                    li: a(href="/") Inicio
-                    li: a(href="/profesional/crear") Medicos
-                    li: a(href="/profesional/agendas") Agendas
+                    li: a(href="/admin/home") Inicio
+                    li: a(href="/admin/cargarProfesional") Medicos
+                    li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
         main 
             h1 Administrador 
