--- a/views/adminPanel.pug
+++ b/views/adminPanel.pug
@@ -5,7 +5,7 @@ html
         link(rel="stylesheet", href="/admin.css")
     body
         header
-            img(src="/agenda.png", alt="logo" class="logoHeader")
+            a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/agenda.png", alt="" class="logoHeader")
             nav 
                 ul(class="ulHeader")
                     li: a(href="/admin/home") Inicio
