--- a/views/home.pug
+++ b/views/home.pug
@@ -5,7 +5,7 @@ html
     link(rel="stylesheet", href="home.css")
   body
     header
-      img(src="/agenda.png", alt="logo" class="logoHeader")
+      a(href="http://localhost:3000/", rel="noopener noreferrer"): img(src="/agenda.png", alt="" class="logoHeader")
       nav
           ul
               li: a(href="/auth/login") Registrate / Iniciar Sesion
