--- a/views/pacienteTurno.pug
+++ b/views/pacienteTurno.pug
@@ -5,7 +5,7 @@ html
         link(rel="stylesheet" href="/pacienteTurno.css")
     body
         header
-            img(src="/agenda.png" alt="" class="logoHeader")
+            a(href="http://localhost:3000/pacientes/paciente", rel="noopener noreferrer"): img(src="/agenda.png", alt="" class="logoHeader")
             nav 
                 ul(class="ulHeader")
                     li: a(href="/pacientes/paciente") Inicio
