--- a/views/secretariaPanel.pug
+++ b/views/secretariaPanel.pug
@@ -5,7 +5,7 @@ html
     link(rel="stylesheet" href="/secretaria.css")
   body
     header
-      img(src="/agenda.png" alt="" class="logoHeader")
+      a(href="http://localhost:3000/secretaria/home", rel="noopener noreferrer"): img(src="/agenda.png", alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
           li: a(href="/secretaria/home") Inicio
