--- a/views/adminCreateProfesional.pug
+++ b/views/adminCreateProfesional.pug
@@ -13,20 +13,7 @@ html
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
         main 
-            h1 Cargar Medicos
-            section(class="sectionCrud")
-                article(class="articleCrud") 
-                    a(href="http://localhost:3000/admin/createProfesional", rel="noopener noreferrer"): img(src="/create.png", alt="logoCreate" class="logoCreate")
-                    span Cargar un medico
-                article(class="articleCrud") 
-                    a(href="http://localhost:3000/admin/readProfesional", rel="noopener noreferrer"): img(src="/read.png", alt="logoRead" class="logoRead")
-                    span Lista de medicos
-                article(class="articleCrud") 
-                    a(href="http://localhost:3000/admin/updateProfesional", rel="noopener noreferrer"): img(src="/update.png", alt="logoUpdate" class="logoUpdate")
-                    span Editar datos de un medico
-                article(class="articleCrud")
-                    a(href="http://localhost:3000/admin/deleteProfesional", rel="noopener noreferrer"): img(src="/delete.png", alt="logoDelete" class="logoDelete")
-                    span Borrar un medico
+            h1 Cargar Medico
         footer(class="footer")
             section(class="sectionFooter")
                 ul Nuestros GitHub
