--- a/public/adminCargarProfesional.css
+++ b/public/adminCargarProfesional.css
@@ -37,6 +37,17 @@ nav{
     cursor: pointer;
 }
 
+.sectionCrud{
+    display: flex;
+    flex-direction: row;
+}
+
+.articleCrud{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .footer{
     border-top: 1px solid rgb(129, 129, 129);
     width: 60vw; 
