--- a/views/adminCargarProfesional.pug
+++ b/views/adminCargarProfesional.pug
@@ -2,10 +2,10 @@ doctype html
 html
     head
         title Cargar Medico
-        link(rel="stylesheet", href="/adminCargarProfesional.css")
+        link(rel="stylesheet", href="/css/adminCargarProfesional.css")
     body
         header
-            a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/agenda.png", alt="" class="logoHeader")
+            a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
             nav 
                 ul(class="ulHeader")
                     li: a(href="/admin/home") Inicio
@@ -16,24 +16,24 @@ html
             h1 Cargar Medicos
             section(class="sectionCrud")
                 article(class="articleCrud") 
-                    a(href="http://localhost:3000/admin/createProfesional", rel="noopener noreferrer"): img(src="/create.png", alt="logoCreate" class="logoCreate")
+                    a(href="http://localhost:3000/admin/createProfesional", rel="noopener noreferrer"): img(src="/img/create.png", alt="logoCreate" class="logoCreate")
                     span Cargar un medico
                 article(class="articleCrud") 
-                    a(href="http://localhost:3000/admin/readProfesional", rel="noopener noreferrer"): img(src="/read.png", alt="logoRead" class="logoRead")
+                    a(href="http://localhost:3000/admin/readProfesional", rel="noopener noreferrer"): img(src="/img/read.png", alt="logoRead" class="logoRead")
                     span Lista de medicos
                 article(class="articleCrud") 
-                    a(href="http://localhost:3000/admin/updateProfesional", rel="noopener noreferrer"): img(src="/update.png", alt="logoUpdate" class="logoUpdate")
+                    a(href="http://localhost:3000/admin/updateProfesional", rel="noopener noreferrer"): img(src="/img/update.png", alt="logoUpdate" class="logoUpdate")
                     span Editar datos de un medico
                 article(class="articleCrud")
-                    a(href="http://localhost:3000/admin/deleteProfesional", rel="noopener noreferrer"): img(src="/delete.png", alt="logoDelete" class="logoDelete")
+                    a(href="http://localhost:3000/admin/deleteProfesional", rel="noopener noreferrer"): img(src="/img/delete.png", alt="logoDelete" class="logoDelete")
                     span Borrar un medico
         footer(class="footer")
             section(class="sectionFooter")
                 ul Nuestros GitHub
                     li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
                     li: a(href="https://github.com/JuanCarrillo2435") Lucero Miguel
-                img(src="/agenda.png", alt="" class="logoFooter")
+                img(src="/img/agenda.png", alt="" class="logoFooter")
                 ul Nuestros LinkedIn
                     li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
                     li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel 
-        script(src="/logout.js")
+        script(src="/js/logout.js")
