--- a/views/login.pug
+++ b/views/login.pug
@@ -2,10 +2,10 @@ doctype html
 html
   head
     title Registro Login
-    link(rel="stylesheet", href="/login.css")
+    link(rel="stylesheet", href="/css/login.css")
   body
     header 
-      a(href="http://localhost:3000/", rel="noopener noreferrer"): img(src="/agenda.png", alt="" class="logoHeader")
+      a(href="http://localhost:3000/", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
     section.seccion
       article.articuloLogin
         form.formLogin(id="loginForm")
@@ -39,8 +39,8 @@ html
         ul Nuestros GitHub
           li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
           li: a(href="https://github.com/JuanCarrillo2435") Lucero Miguel
-        img(src="/agenda.png", alt="" class="logoFooter")
+        img(src="/img/agenda.png", alt="" class="logoFooter")
         ul Nuestros LinkedIn
           li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
           li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel 
-    script(type="module" src="/login.js")
+    script(type="module" src="/js/login.js")
