--- a/views/secretariaPanel.pug
+++ b/views/secretariaPanel.pug
@@ -2,10 +2,10 @@ doctype html
 html
   head
     title Secretaria Panel
-    link(rel="stylesheet" href="/secretaria.css")
+    link(rel="stylesheet" href="/css/secretaria.css")
   body
     header
-      a(href="http://localhost:3000/secretaria/home", rel="noopener noreferrer"): img(src="/agenda.png", alt="" class="logoHeader")
+      a(href="http://localhost:3000/secretaria/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
           li: a(href="/secretaria/home") Inicio
@@ -18,8 +18,8 @@ html
         ul(class="ulFooter") Nuestros GitHub
           li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
           li: a(href="https://github.com/JuanCarrillo2435") Lucero Miguel
-        img(src="/agenda.png" alt="" class="logoFooter")
+        img(src="/img/agenda.png" alt="" class="logoFooter")
         ul(class="ulFooter") Nuestros LinkedIn
           li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
           li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
-    script(src="/logout.js")
+    script(src="/js/logout.js")
