--- a/views/adminReadProfesional.pug
+++ b/views/adminReadProfesional.pug
@@ -2,10 +2,10 @@ doctype html
 html
     head
         title Cargar Medico
-        link(rel="stylesheet", href="/adminCargarProfesional.css")
+        link(rel="stylesheet", href="/css/adminCargarProfesional.css")
     body
         header
-            a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/agenda.png", alt="" class="logoHeader")
+            a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
             nav 
                 ul(class="ulHeader")
                     li: a(href="/admin/home") Inicio
@@ -19,8 +19,8 @@ html
                 ul Nuestros GitHub
                     li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
                     li: a(href="https://github.com/JuanCarrillo2435") Lucero Miguel
-                img(src="/agenda.png", alt="" class="logoFooter")
+                img(src="/img/agenda.png", alt="" class="logoFooter")
                 ul Nuestros LinkedIn
                     li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
                     li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel 
-        script(src="/logout.js")
+        script(src="/js/logout.js")
