--- a/views/admin/adminCargarAgenda.pug
+++ b/views/admin/adminCargarAgenda.pug
@@ -13,7 +13,7 @@ html
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
         main 
-            h1 Cargar Agenda
+            h1 Cargar Agendaa
         footer(class="footer")
             section(class="sectionFooter")
                 ul Nuestros GitHub
