--- a/views/admin/adminCreateProfesional.pug
+++ b/views/admin/adminCreateProfesional.pug
@@ -3,6 +3,7 @@ html
     head
         title Cargar Medico
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
+        link(rel="stylesheet", href="/css/adminCreateProfesional.css")
     body
         header
             a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
@@ -12,7 +13,10 @@ html
                     li: a(href="/admin/cargarProfesional") Medicos
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
-        main 
+        main
+            if(success)
+            script.
+                alert('Profesional creado exitosamente');
             form.formCreate(action="/profesional/crear", method="POST")
                 span.spanCreate Cargar un medico
                 fieldset.nombreCompleto 
